<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".About">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/madeBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:text="@string/made_by"
        android:textSize="18sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/madeBy"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:lottie_autoPlay="true"
        app:lottie_fileName="about.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/devs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/animationView"
        android:paddingStart="20dp"
        android:text="@string/devs"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/devs"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:text="@string/dev1"
        android:textColor="#ADD8E6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dev1"
        android:layout_marginTop="0dp"
        android:paddingStart="20dp"
        android:text="@string/dev2"
        android:textColor="#ADD8E6"
        android:textSize="18sp" />
</RelativeLayout>